--- a/AnimateHub/Base.lproj/Main.storyboard
+++ b/AnimateHub/Base.lproj/Main.storyboard
@@ -1,25 +1,125 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6211" systemVersion="14A298i" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9531" systemVersion="15C50" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="C1Y-Sy-knp">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6204"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9529"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
-        <scene sceneID="tne-QT-ifu">
+        <!--Root View Controller-->
+        <scene sceneID="dGB-L9-Ccl">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
-                    <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
-                        <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
-                    </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
+                <tableViewController storyboardIdentifier="WBTableView" useStoryboardIdentifierAsRestorationIdentifier="YES" id="h3l-kW-Im5" customClass="WBTableViewController" customModule="AnimateHub" customModuleProvider="target" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" id="Njo-Ve-2Th">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
-                    </view>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <prototypes>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="WBTableViewCell" id="IGl-yK-h2I">
+                                <rect key="frame" x="0.0" y="92" width="600" height="44"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="IGl-yK-h2I" id="ALo-cu-1rs">
+                                    <rect key="frame" x="0.0" y="0.0" width="600" height="43"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                </tableViewCellContentView>
+                                <connections>
+                                    <segue destination="oRt-0Z-XOc" kind="show" id="Ct4-2q-ITN"/>
+                                </connections>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="h3l-kW-Im5" id="AmT-F5-zgV"/>
+                            <outlet property="delegate" destination="h3l-kW-Im5" id="J4K-hZ-Lj8"/>
+                        </connections>
+                    </tableView>
+                    <navigationItem key="navigationItem" title="Root View Controller" id="xF7-Nv-BG8"/>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="FWq-ov-tze" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="237" y="221"/>
+        </scene>
+        <!--Logon View Controller-->
+        <scene sceneID="QXq-TW-M8h">
+            <objects>
+                <viewController id="oRt-0Z-XOc" customClass="WBLogonViewController" customModule="AnimateHub" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="qTV-Dn-AOJ"/>
+                        <viewControllerLayoutGuide type="bottom" id="jdd-DN-M2v"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="26x-yB-GLP">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" image="backgroud" translatesAutoresizingMaskIntoConstraints="NO" id="JTL-5E-wwg">
+                                <rect key="frame" x="0.0" y="64" width="375" height="536"/>
+                            </imageView>
+                            <imageView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" fixedFrame="YES" image="Bubble1" translatesAutoresizingMaskIntoConstraints="NO" id="8Kp-ku-nhY">
+                                <rect key="frame" x="0.0" y="64" width="123" height="123"/>
+                            </imageView>
+                            <imageView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" fixedFrame="YES" image="Bubble3" translatesAutoresizingMaskIntoConstraints="NO" id="6BH-2Z-FRb">
+                                <rect key="frame" x="189" y="357" width="181" height="184"/>
+                            </imageView>
+                            <imageView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" fixedFrame="YES" image="Bubble4" translatesAutoresizingMaskIntoConstraints="NO" id="Wma-sL-LMc">
+                                <rect key="frame" x="0.0" y="450" width="150" height="150"/>
+                            </imageView>
+                            <imageView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" fixedFrame="YES" image="Bubble5" translatesAutoresizingMaskIntoConstraints="NO" id="5vR-qp-Qw4">
+                                <rect key="frame" x="212" y="112" width="150" height="150"/>
+                            </imageView>
+                            <imageView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" fixedFrame="YES" image="Bubble2" translatesAutoresizingMaskIntoConstraints="NO" id="slt-4R-oDz">
+                                <rect key="frame" x="47" y="246" width="150" height="150"/>
+                            </imageView>
+                            <imageView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" fixedFrame="YES" image="AnimateHub" translatesAutoresizingMaskIntoConstraints="NO" id="f4E-qE-9xJ">
+                                <rect key="frame" x="54" y="195" width="266" height="36"/>
+                            </imageView>
+                            <imageView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" fixedFrame="YES" image="dot" translatesAutoresizingMaskIntoConstraints="NO" id="ssO-Ix-IyT">
+                                <rect key="frame" x="111" y="181" width="12" height="12"/>
+                            </imageView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="JTL-5E-wwg" firstAttribute="bottom" secondItem="jdd-DN-M2v" secondAttribute="top" id="Kgl-Eg-Kdm"/>
+                            <constraint firstItem="JTL-5E-wwg" firstAttribute="leading" secondItem="26x-yB-GLP" secondAttribute="leading" id="SgA-tZ-tiK"/>
+                            <constraint firstItem="JTL-5E-wwg" firstAttribute="top" secondItem="qTV-Dn-AOJ" secondAttribute="bottom" id="uFp-l6-caw"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="bubble1" destination="8Kp-ku-nhY" id="dC4-sg-TlJ"/>
+                        <outlet property="bubble2" destination="5vR-qp-Qw4" id="uAI-cG-48Q"/>
+                        <outlet property="bubble3" destination="slt-4R-oDz" id="Grq-Yw-wEh"/>
+                        <outlet property="bubble4" destination="6BH-2Z-FRb" id="CYW-1c-zBG"/>
+                        <outlet property="bubble5" destination="Wma-sL-LMc" id="2cg-a0-9LI"/>
+                        <outlet property="dot" destination="ssO-Ix-IyT" id="oZ1-zG-bWO"/>
+                        <outlet property="logo" destination="f4E-qE-9xJ" id="Fzf-vs-8aZ"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="YLW-Hm-TaT" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="897" y="221"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="ZoP-rs-giP">
+            <objects>
+                <navigationController id="C1Y-Sy-knp" sceneMemberID="viewController">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="iqu-P2-fSn">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <connections>
+                        <segue destination="h3l-kW-Im5" kind="relationship" relationship="rootViewController" id="MaX-Lt-gdJ"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="0cs-lZ-xdv" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-422" y="221"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="AnimateHub" width="266" height="36"/>
+        <image name="Bubble1" width="123" height="123"/>
+        <image name="Bubble2" width="150" height="150"/>
+        <image name="Bubble3" width="181" height="184"/>
+        <image name="Bubble4" width="150" height="150"/>
+        <image name="Bubble5" width="150" height="150"/>
+        <image name="backgroud" width="375" height="667"/>
+        <image name="dot" width="11" height="10"/>
+    </resources>
 </document>
