add input fields for username and password with animation

--- a/AnimateHub/Base.lproj/LaunchScreen.storyboard
+++ b/AnimateHub/Base.lproj/LaunchScreen.storyboard
@@ -102,8 +102,12 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="zNM-bU-s3W" firstAttribute="leading" secondItem="Ze5-6b-2t3" secondAttribute="leadingMargin" constant="90" id="0YS-Iv-kd1"/>
-                            <constraint firstItem="xb3-aO-Qok" firstAttribute="top" secondItem="zNM-bU-s3W" secondAttribute="bottom" constant="369" id="19v-JB-AXj"/>
+                            <constraint firstItem="zNM-bU-s3W" firstAttribute="leading" secondItem="Ze5-6b-2t3" secondAttribute="leadingMargin" constant="90" id="0YS-Iv-kd1">
+                                <variation key="heightClass=compact-widthClass=compact" constant="79"/>
+                            </constraint>
+                            <constraint firstItem="xb3-aO-Qok" firstAttribute="top" secondItem="zNM-bU-s3W" secondAttribute="bottom" constant="369" id="19v-JB-AXj">
+                                <variation key="heightClass=compact-widthClass=compact" constant="365"/>
+                            </constraint>
                             <constraint firstItem="zNM-bU-s3W" firstAttribute="leading" secondItem="Ze5-6b-2t3" secondAttribute="leading" constant="260" id="1cC-F1-2aq">
                                 <variation key="heightClass=compact-widthClass=regular" constant="283"/>
                                 <variation key="heightClass=regular-widthClass=regular" constant="215"/>
@@ -123,7 +127,10 @@
                             <constraint firstItem="zNM-bU-s3W" firstAttribute="leading" secondItem="Ze5-6b-2t3" secondAttribute="leading" constant="283" id="9Ec-cQ-ONo"/>
                             <constraint firstItem="zNM-bU-s3W" firstAttribute="leading" secondItem="Ze5-6b-2t3" secondAttribute="leading" constant="215" id="EFU-E2-yBi"/>
                             <constraint firstItem="xb3-aO-Qok" firstAttribute="top" secondItem="zNM-bU-s3W" secondAttribute="bottom" constant="508" id="GVv-nn-QKw"/>
-                            <constraint firstItem="zNM-bU-s3W" firstAttribute="top" secondItem="Llm-lL-Icb" secondAttribute="bottom" constant="180" id="Hfh-nB-EAo"/>
+                            <constraint firstItem="zNM-bU-s3W" firstAttribute="top" secondItem="Llm-lL-Icb" secondAttribute="bottom" constant="180" id="Hfh-nB-EAo">
+                                <variation key="heightClass=compact-widthClass=compact" constant="252"/>
+                            </constraint>
+                            <constraint firstItem="zNM-bU-s3W" firstAttribute="leading" secondItem="Ze5-6b-2t3" secondAttribute="leadingMargin" constant="79" id="PTg-Bh-W4h"/>
                             <constraint firstItem="xb3-aO-Qok" firstAttribute="top" secondItem="zNM-bU-s3W" secondAttribute="bottom" constant="179" id="R82-PD-UGp"/>
                             <constraint firstItem="zNM-bU-s3W" firstAttribute="top" secondItem="Llm-lL-Icb" secondAttribute="bottom" constant="237" id="RDv-v2-ZQh"/>
                             <constraint firstItem="zNM-bU-s3W" firstAttribute="top" secondItem="Llm-lL-Icb" secondAttribute="bottom" constant="131" id="Sls-1J-Qxc">
@@ -134,7 +141,6 @@
                                 <variation key="heightClass=regular" constant="508"/>
                                 <variation key="widthClass=regular" constant="357"/>
                             </constraint>
-                            <constraint firstItem="zNM-bU-s3W" firstAttribute="top" secondItem="Llm-lL-Icb" secondAttribute="bottom" constant="131" id="VJt-B6-0R0"/>
                             <constraint firstItem="zNM-bU-s3W" firstAttribute="leading" secondItem="Ze5-6b-2t3" secondAttribute="leading" constant="203" id="d0H-Ls-cU8">
                                 <variation key="heightClass=compact-widthClass=regular" constant="283"/>
                             </constraint>
@@ -145,8 +151,8 @@
                                 <variation key="heightClass=compact-widthClass=regular" constant="180"/>
                                 <variation key="heightClass=regular-widthClass=regular" constant="241"/>
                             </constraint>
-                            <constraint firstItem="xb3-aO-Qok" firstAttribute="top" secondItem="zNM-bU-s3W" secondAttribute="bottom" constant="225" id="kYN-BP-NFU"/>
                             <constraint firstItem="xb3-aO-Qok" firstAttribute="top" secondItem="zNM-bU-s3W" secondAttribute="bottom" constant="508" id="kk6-9I-H9u"/>
+                            <constraint firstItem="zNM-bU-s3W" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="l2x-ZL-dkx"/>
                             <constraint firstItem="zNM-bU-s3W" firstAttribute="leading" secondItem="Ze5-6b-2t3" secondAttribute="leading" constant="215" id="l4b-lE-EDU"/>
                             <constraint firstItem="zNM-bU-s3W" firstAttribute="top" secondItem="Llm-lL-Icb" secondAttribute="bottom" constant="180" id="l6C-N6-D2e">
                                 <variation key="heightClass=compact" constant="131"/>
@@ -156,9 +162,9 @@
                             <constraint firstItem="xb3-aO-Qok" firstAttribute="top" secondItem="zNM-bU-s3W" secondAttribute="bottom" constant="225" id="rX9-HN-PQa">
                                 <variation key="heightClass=compact-widthClass=regular" constant="179"/>
                             </constraint>
-                            <constraint firstItem="zNM-bU-s3W" firstAttribute="leading" secondItem="Ze5-6b-2t3" secondAttribute="leadingMargin" constant="99" id="vfc-ft-t52"/>
+                            <constraint firstItem="xb3-aO-Qok" firstAttribute="top" secondItem="zNM-bU-s3W" secondAttribute="bottom" constant="365" id="tT8-1j-3tV"/>
+                            <constraint firstItem="zNM-bU-s3W" firstAttribute="top" secondItem="Llm-lL-Icb" secondAttribute="bottom" constant="252" id="v4u-Xm-KaZ"/>
                             <constraint firstItem="zNM-bU-s3W" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="vvh-vq-AkS"/>
-                            <constraint firstItem="zNM-bU-s3W" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="zQB-Rf-e1n"/>
                             <constraint firstItem="zNM-bU-s3W" firstAttribute="top" secondItem="Llm-lL-Icb" secondAttribute="bottom" constant="241" id="zdH-bh-Kwn"/>
                         </constraints>
                         <variation key="default">
@@ -170,25 +176,25 @@
                                 <exclude reference="9Ec-cQ-ONo"/>
                                 <exclude reference="EFU-E2-yBi"/>
                                 <exclude reference="Hfh-nB-EAo"/>
+                                <exclude reference="PTg-Bh-W4h"/>
                                 <exclude reference="RDv-v2-ZQh"/>
                                 <exclude reference="Sls-1J-Qxc"/>
-                                <exclude reference="VJt-B6-0R0"/>
                                 <exclude reference="d0H-Ls-cU8"/>
                                 <exclude reference="d7M-td-Mtc"/>
                                 <exclude reference="dJS-Pd-8QY"/>
+                                <exclude reference="l2x-ZL-dkx"/>
                                 <exclude reference="l4b-lE-EDU"/>
-                                <exclude reference="vfc-ft-t52"/>
+                                <exclude reference="v4u-Xm-KaZ"/>
                                 <exclude reference="vvh-vq-AkS"/>
-                                <exclude reference="zQB-Rf-e1n"/>
                                 <exclude reference="zdH-bh-Kwn"/>
                                 <exclude reference="19v-JB-AXj"/>
                                 <exclude reference="3xm-fD-s3R"/>
                                 <exclude reference="72f-f4-Yca"/>
                                 <exclude reference="GVv-nn-QKw"/>
                                 <exclude reference="R82-PD-UGp"/>
-                                <exclude reference="kYN-BP-NFU"/>
                                 <exclude reference="kk6-9I-H9u"/>
                                 <exclude reference="rX9-HN-PQa"/>
+                                <exclude reference="tT8-1j-3tV"/>
                             </mask>
                         </variation>
                         <variation key="heightClass=compact">
@@ -234,16 +240,20 @@
                         </variation>
                         <variation key="heightClass=compact-widthClass=compact">
                             <mask key="constraints">
+                                <exclude reference="0YS-Iv-kd1"/>
+                                <exclude reference="2nY-Vs-os0"/>
                                 <exclude reference="60B-ST-JgX"/>
+                                <exclude reference="Hfh-nB-EAo"/>
+                                <include reference="PTg-Bh-W4h"/>
                                 <exclude reference="Sls-1J-Qxc"/>
-                                <include reference="VJt-B6-0R0"/>
                                 <exclude reference="d0H-Ls-cU8"/>
+                                <include reference="l2x-ZL-dkx"/>
                                 <exclude reference="l6C-N6-D2e"/>
-                                <include reference="vfc-ft-t52"/>
-                                <include reference="zQB-Rf-e1n"/>
+                                <include reference="v4u-Xm-KaZ"/>
+                                <exclude reference="19v-JB-AXj"/>
                                 <exclude reference="UM0-e2-wG6"/>
-                                <include reference="kYN-BP-NFU"/>
                                 <exclude reference="rX9-HN-PQa"/>
+                                <include reference="tT8-1j-3tV"/>
                             </mask>
                         </variation>
                         <variation key="heightClass=compact-widthClass=regular">
@@ -287,10 +297,11 @@
                             </mask>
                         </variation>
                     </view>
+                    <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina47"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iYj-Kq-Ea1" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="39" y="222"/>
+            <point key="canvasLocation" x="38.25" y="221.25"/>
         </scene>
     </scenes>
 </document>
