--- a/AnimateHub/Base.lproj/Main.storyboard
+++ b/AnimateHub/Base.lproj/Main.storyboard
@@ -15,7 +15,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="WBTableViewCell" id="IGl-yK-h2I">
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="WBTableViewCell0" id="IGl-yK-h2I">
                                 <rect key="frame" x="0.0" y="92" width="600" height="44"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="IGl-yK-h2I" id="ALo-cu-1rs">
@@ -24,6 +24,17 @@
                                 </tableViewCellContentView>
                                 <connections>
                                     <segue destination="oRt-0Z-XOc" kind="show" id="Ct4-2q-ITN"/>
+                                </connections>
+                            </tableViewCell>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="WBTableViewCell1" id="wOy-y9-jgs">
+                                <rect key="frame" x="0.0" y="136" width="600" height="44"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="wOy-y9-jgs" id="IOk-kD-IWH">
+                                    <rect key="frame" x="0.0" y="0.0" width="600" height="43"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                </tableViewCellContentView>
+                                <connections>
+                                    <segue destination="1xy-eU-zFC" kind="show" id="gsG-GF-Kog"/>
                                 </connections>
                             </tableViewCell>
                         </prototypes>
@@ -38,7 +49,7 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="FWq-ov-tze" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="237" y="221"/>
+            <point key="canvasLocation" x="244" y="-35"/>
         </scene>
         <!--Logon-->
         <scene sceneID="QXq-TW-M8h">
@@ -56,28 +67,28 @@
                                 <rect key="frame" x="113" y="64" width="375" height="536"/>
                             </imageView>
                             <imageView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" image="Bubble1" translatesAutoresizingMaskIntoConstraints="NO" id="8Kp-ku-nhY">
-                                <rect key="frame" x="113" y="64" width="123" height="123"/>
+                                <rect key="frame" x="113" y="64" width="123" height="121"/>
                             </imageView>
                             <imageView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" image="Bubble4" translatesAutoresizingMaskIntoConstraints="NO" id="Wma-sL-LMc">
                                 <rect key="frame" x="113" y="450" width="150" height="150"/>
                             </imageView>
                             <imageView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" image="Bubble5" translatesAutoresizingMaskIntoConstraints="NO" id="5vR-qp-Qw4">
-                                <rect key="frame" x="338" y="88" width="150" height="152"/>
+                                <rect key="frame" x="338" y="88" width="150" height="150"/>
                             </imageView>
                             <imageView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" image="Bubble2" translatesAutoresizingMaskIntoConstraints="NO" id="slt-4R-oDz">
-                                <rect key="frame" x="160" y="246" width="150" height="150"/>
+                                <rect key="frame" x="160" y="244" width="150" height="150"/>
                             </imageView>
                             <imageView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" image="AnimateHub" translatesAutoresizingMaskIntoConstraints="NO" id="f4E-qE-9xJ">
-                                <rect key="frame" x="167" y="187" width="266" height="36"/>
+                                <rect key="frame" x="167" y="185" width="266" height="36"/>
                             </imageView>
                             <imageView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" image="dot" translatesAutoresizingMaskIntoConstraints="NO" id="ssO-Ix-IyT">
-                                <rect key="frame" x="223" y="166" width="13" height="13"/>
+                                <rect key="frame" x="223" y="166" width="13" height="11"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="13" id="TgN-2i-PBG"/>
                                 </constraints>
                             </imageView>
                             <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Password" textAlignment="natural" minimumFontSize="17" background="Field" disabledBackground="DisabledField" translatesAutoresizingMaskIntoConstraints="NO" id="WRn-EW-XKC">
-                                <rect key="frame" x="140" y="322" width="320" height="40"/>
+                                <rect key="frame" x="140" y="320" width="320" height="40"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="40" id="KDj-CD-UD1"/>
                                 </constraints>
@@ -85,7 +96,7 @@
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
                             <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Usernmae" textAlignment="natural" minimumFontSize="17" background="Field" disabledBackground="DisabledField" translatesAutoresizingMaskIntoConstraints="NO" id="OsZ-VO-OlQ">
-                                <rect key="frame" x="140" y="257" width="320" height="40"/>
+                                <rect key="frame" x="140" y="255" width="320" height="40"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="40" id="NZT-pA-89L"/>
                                 </constraints>
@@ -93,7 +104,7 @@
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="U83-xw-chM">
-                                <rect key="frame" x="139" y="404" width="321" height="52"/>
+                                <rect key="frame" x="139" y="402" width="321" height="52"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="52" id="hgu-Vo-4Hv"/>
                                 </constraints>
@@ -105,10 +116,7 @@
                                 </connections>
                             </button>
                             <imageView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" ambiguous="YES" misplaced="YES" image="Bubble3" translatesAutoresizingMaskIntoConstraints="NO" id="6BH-2Z-FRb">
-                                <rect key="frame" x="307" y="355" width="181" height="177"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" constant="111" id="WeW-Ar-xAT"/>
-                                </constraints>
+                                <rect key="frame" x="266" y="376" width="182" height="174"/>
                             </imageView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
@@ -126,7 +134,7 @@
                             <constraint firstAttribute="trailingMargin" relation="greaterThanOrEqual" secondItem="WRn-EW-XKC" secondAttribute="trailing" constant="20" id="Csm-EC-ytF"/>
                             <constraint firstItem="WRn-EW-XKC" firstAttribute="trailing" secondItem="U83-xw-chM" secondAttribute="trailing" id="DsR-wh-fHE"/>
                             <constraint firstItem="OsZ-VO-OlQ" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="26x-yB-GLP" secondAttribute="leadingMargin" constant="10" id="EZq-aJ-4S9"/>
-                            <constraint firstItem="6BH-2Z-FRb" firstAttribute="top" relation="lessThanOrEqual" secondItem="U83-xw-chM" secondAttribute="bottom" constant="2" id="GZA-m9-n1Q"/>
+                            <constraint firstItem="6BH-2Z-FRb" firstAttribute="top" relation="greaterThanOrEqual" secondItem="U83-xw-chM" secondAttribute="bottom" id="GZA-m9-n1Q"/>
                             <constraint firstItem="WRn-EW-XKC" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="26x-yB-GLP" secondAttribute="leadingMargin" constant="20" id="H3w-Wd-q16"/>
                             <constraint firstItem="OsZ-VO-OlQ" firstAttribute="top" secondItem="5vR-qp-Qw4" secondAttribute="bottom" constant="17" id="L7W-9i-cAu"/>
                             <constraint firstItem="WRn-EW-XKC" firstAttribute="top" secondItem="OsZ-VO-OlQ" secondAttribute="bottom" constant="25" id="M85-cG-2qC"/>
@@ -145,10 +153,9 @@
                             <constraint firstItem="6BH-2Z-FRb" firstAttribute="trailing" secondItem="U83-xw-chM" secondAttribute="trailing" id="fyf-zb-5P7"/>
                             <constraint firstItem="WRn-EW-XKC" firstAttribute="top" secondItem="OsZ-VO-OlQ" secondAttribute="bottom" constant="25" id="hS4-ED-Shf"/>
                             <constraint firstItem="WRn-EW-XKC" firstAttribute="centerX" secondItem="26x-yB-GLP" secondAttribute="centerX" id="ibx-BF-nDc"/>
-                            <constraint firstItem="f4E-qE-9xJ" firstAttribute="centerX" secondItem="JTL-5E-wwg" secondAttribute="centerX" id="igA-9P-8sw"/>
                             <constraint firstItem="U83-xw-chM" firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="6BH-2Z-FRb" secondAttribute="trailing" id="igR-uE-gwK"/>
                             <constraint firstItem="U83-xw-chM" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="26x-yB-GLP" secondAttribute="leadingMargin" constant="20" id="jo4-AR-xaf"/>
-                            <constraint firstItem="jdd-DN-M2v" firstAttribute="top" relation="lessThanOrEqual" secondItem="6BH-2Z-FRb" secondAttribute="bottom" constant="31" id="kHe-NX-Oj9"/>
+                            <constraint firstItem="jdd-DN-M2v" firstAttribute="top" relation="greaterThanOrEqual" secondItem="6BH-2Z-FRb" secondAttribute="bottom" constant="31" id="kHe-NX-Oj9"/>
                             <constraint firstItem="OsZ-VO-OlQ" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="26x-yB-GLP" secondAttribute="leadingMargin" constant="20" id="lSg-HT-pWS"/>
                             <constraint firstItem="U83-xw-chM" firstAttribute="leading" secondItem="OsZ-VO-OlQ" secondAttribute="leading" id="lka-ZX-Rvv"/>
                             <constraint firstAttribute="trailingMargin" relation="greaterThanOrEqual" secondItem="U83-xw-chM" secondAttribute="trailing" constant="20" id="qbf-4x-AdK"/>
@@ -168,7 +175,6 @@
                         </constraints>
                         <variation key="default">
                             <mask key="constraints">
-                                <exclude reference="igA-9P-8sw"/>
                                 <exclude reference="1Ts-7K-Vgg"/>
                                 <exclude reference="4HB-Xq-woD"/>
                                 <exclude reference="Ng5-he-KRZ"/>
@@ -194,7 +200,35 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="YLW-Hm-TaT" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="897" y="221"/>
+            <point key="canvasLocation" x="959" y="-327"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="2hx-yB-aX9">
+            <objects>
+                <viewController id="1xy-eU-zFC" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="843-BO-Voy"/>
+                        <viewControllerLayoutGuide type="bottom" id="2PI-zc-erz"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" horizontalCompressionResistancePriority="749" verticalCompressionResistancePriority="749" id="aFj-hs-lbp">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <stackView opaque="NO" contentMode="scaleToFill" fixedFrame="YES" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="ofm-J3-qdF">
+                                <rect key="frame" x="0.0" y="64" width="375" height="667"/>
+                                <subviews>
+                                    <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="750" verticalHuggingPriority="750" ambiguous="YES" image="backgroud" translatesAutoresizingMaskIntoConstraints="NO" id="cl2-st-5z4">
+                                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                                    </imageView>
+                                </subviews>
+                            </stackView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="tnR-Sa-j7h" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="959" y="351"/>
         </scene>
         <!--Navigation-->
         <scene sceneID="ZoP-rs-giP">
@@ -210,7 +244,7 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="0cs-lZ-xdv" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-422" y="221"/>
+            <point key="canvasLocation" x="-477" y="-35"/>
         </scene>
     </scenes>
     <resources>
